# crud_fastapi_mongodb

./: README.md  pyproject.toml
config/: db.py
models/: user.py
routes/: user.py
test/: conftest.py
test/routes/: test_user_routes.py
